fixed mozzila scrollbar bug

--- a/style.scss
+++ b/style.scss
@@ -193,7 +193,7 @@ body {
 
 #scrollbar {
   overflow-y: scroll;
-  scrollbar-color: #FFFFFF rgba(0, 0, 0, 0.3);
+  scrollbar-color: #FFF rgba(0, 0, 0, 0.3);
   scrollbar-width: thin;
 }
 
